Alignment Fix

--- a/Design-Final_18/css/style.css
+++ b/Design-Final_18/css/style.css
@@ -22,8 +22,11 @@
 
 
 .top-text li{
+    margin-right: 3px;
     list-style: none;
 }
+
+
 
 .top-text{
     float: right;
